--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.1"
 core = "0.9.0"
 dagger = "2.51.1"
 desugar_jdk_libs = "2.0.4"
@@ -25,10 +25,12 @@ fragmentKtx = "1.8.1"
 roomKtx = "2.6.1"
 roomCompiler = "2.6.1"
 coroutines = "1.8.1"
-ktor = "2.3.7"
+ktor = "2.3.12"
+workRuntimeKtx = "2.9.0"
 
 [libraries]
 agp = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 ktor-client = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
