--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ dagger = "2.51.1"
 datastorePreferences = "1.1.1"
 desugar_jdk_libs = "2.0.4"
 detektFormatting = "1.21.0"
+divCore = "30.9.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -23,6 +24,7 @@ composeBom = "2024.06.00"
 lifecycleViewmodelCompose = "2.8.2"
 navigationCompose = "2.7.7"
 fragmentKtx = "1.8.1"
+picasso = "30.9.0"
 roomKtx = "2.6.1"
 roomCompiler = "2.6.1"
 coroutines = "1.8.1"
@@ -69,6 +71,10 @@ ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorCli
 ktor-client-logging-jvm = { module = "io.ktor:ktor-client-logging-jvm", version.ref = "ktorClientLoggingJvm" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorSerializationKotlinxJson" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
+div = { module = "com.yandex.div:div", version.ref = "divCore" }
+div-core = { module = "com.yandex.div:div-core", version.ref = "divCore" }
+div-json = { module = "com.yandex.div:div-json", version.ref = "divCore" }
+picasso = { module = "com.yandex.div:picasso", version.ref = "picasso" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
